--- a/senor-sol/index.html
+++ b/senor-sol/index.html
@@ -28,5 +28,10 @@
       <br>
       <button aria-label="submit button" id="submit-button">Submit</button>
     </form>
+    <div id="results">
+      <p id="results-zipcode">Zipcode: </p>
+      <p id="results-date">Date: </p>
+      <p id="results-timezone">Timezone: </p>
+    </div>
   </body>
 </html>
