--- a/senor-sol/index.html
+++ b/senor-sol/index.html
@@ -11,6 +11,7 @@
     <div id="app"></div>
     <h1>Señor Sol</h1>
     <form aria-label="Form for sunset/sunrise" id="sunForm">
+      <h2 id="from-header">Select Time and Place</h2>
       <label for="zipcode" aria-label="Zipcode">Zipcode:</label>
       <input name="zipcode" id="zipcode" type="text" required minlength="5" maxlength="5" placeholder="12345" pattern=^[0-9]{5}(?:-[0-9]{4})?$> <!-- use regex so that it is numbers only -->
       <br>
