--- a/senor-sol/index.html
+++ b/senor-sol/index.html
@@ -23,7 +23,6 @@
         <option value="PST">PST</option>
         <option value="CST">CST</option>
         <option value="MST">MST</option>
-        <!-- est, cst, mst, pst,  -->
       </select>
       <br>
       <button aria-label="submit button" id="submit-button">Submit</button>
@@ -32,6 +31,8 @@
       <p id="results-zipcode">Zipcode: </p>
       <p id="results-date">Date: </p>
       <p id="results-timezone">Timezone: </p>
+      <p id="results-sunrise">Sunrise: </p>
+      <p id="results-sunset">Sunset: </p>
     </div>
   </body>
 </html>
