--- a/senor-sol/index.html
+++ b/senor-sol/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/js/dom-helpers.js"></script>
+    <script type="module" src="./src/js/fetch-functions.js"></script>
+    <script type="module" src="./src/js/render-functions.js"></script>
     <title>Señor Sol</title>
   </head>
   <body>
@@ -18,7 +21,7 @@
       <label for="date" aria-label="Date">Date:</label>
       <input type="date" name="date" id="date" required minlength="10">
       <br>
-      <label for="timezone" aria-label="Timezone"></label>
+      <label for="timezone" aria-label="Timezone">Timezone:</label>
       <select name="timezone" id="timezone">
         <option value="EST">EST</option> 
         <option value="PST">PST</option>
