--- a/senor-sol/index.html
+++ b/senor-sol/index.html
@@ -28,14 +28,14 @@
     <br>
     <button aria-label="submit button" id="submit-button">Submit</button>
   </form>
-  <div id="results">
-    <p id="results-zipcode">Zipcode: </p>
-    <p id="results-date">Date: </p>
-    <p id="results-timezone">Timezone: </p>
-    <p id="results-location">Location:</p>
-    <p id="results-sunrise">Sunrise: </p>
-    <p id="results-sunset">Sunset: </p>
-  </div>
+  <!-- need to change into dom manipulation -->
+  <!-- connect with fetch-functions -->
+  <section id="review-section" aria-labelledby="review-section">
+    <h2>Results</h2>
+    <ul id="reviews-list">
+      <!-- dom manipulation will connect here -->
+    </ul>
+  </section>
 </body>
 </html>
 
