completed default info

--- a/senor-sol/index.html
+++ b/senor-sol/index.html
@@ -29,10 +29,14 @@
     <button aria-label="submit button" id="submit-button">Submit</button>
   </form>
   <!-- need to change into dom manipulation -->
+  <section id="default-sun-container">
+    <h2 id="default-sun-heading">Default Info</h2>
+    <ul id="default-info"></ul>
+  </section>
   <!-- connect with fetch-functions -->
-  <section id="review-section" aria-labelledby="review-section">
+  <section id="results-section" aria-labelledby="results-section">
     <h2>Results</h2>
-    <ul id="reviews-list">
+    <ul id="results-list">
       <!-- dom manipulation will connect here -->
     </ul>
   </section>
