added divs and more info button

--- a/senor-sol/index.html
+++ b/senor-sol/index.html
@@ -36,9 +36,9 @@
   <!-- connect with fetch-functions -->
   <section id="results-section" aria-labelledby="results-section">
     <h2>Results</h2>
-    <ul id="results-list">
-      <!-- dom manipulation will connect here -->
-    </ul>
+      <div id ="results-container">
+        
+      </div>
   </section>
 </body>
 </html>
